Rework based on feedback

--- a/_lessons/104.html
+++ b/_lessons/104.html
@@ -33,10 +33,6 @@ engineers are transforming data all the time, but you wouldn't know it.)
 
 ---
 
-<img src="/lessons/img/{{page.lesson}}/mmorpg-erd.png" class="img-center">
-
----
-
 # I'm thinking of a model...
 
 Kimball says:
@@ -163,7 +159,7 @@ The graph tells a story:
 &rarr;
 <span style="color: blue;">Staging</span>
 &rarr;
-<span style="color: purple;">Dimensions + Facts</span></h3>
+<span style="color: purple;">Dimensions/Facts</span></h3>
 
 ---
 
